Fixed bugs on the frontend and backend